# constellation

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_HANDOFF_rulerships.md  README.md  pyproject.toml  render.yaml
.github/workflows/: tests.yml
data/fixtures/: example_person_a_birth.json  example_person_b_birth.json  example_romantic_context.json
docs/: 13_ui_wireframe_branding.md  CLAUDE_CODE_HANDOFF.md  PRODUCT_STRATEGY.md  PROJECT_STATUS.md  agent-workflow.md  asteroid_points_audit.md  codex-handoff.md  constellation_wireframe.html  deployment-checklist.md  fixtures.md  friend-test-plan.md  geocoding-timezone-plan.md  github-actions.md  marketing-language-bank.md  master-buildout-plan.md  persistence-plan.md  product-doctrine.md  product-ideas-backlog.md  relationship-report-doctrine.md  report-structure.md  secrets-and-env.md  technical-spec.md
docs/astrology_doctrine/: 10_second_pass_research_notes.md  11_third_pass_research_notes.md  README.md  architecture_map.md  asteroid_policy.md  composite_doctrine.md  pattern_taxonomy.md  relationship_rulerships.md  report_prioritization.md  report_voice_guide.md  synastry_weighting.md
tests/: test_api.py  test_aspects.py  test_birth_validation.py  test_chart_smoke.py  test_composite.py  test_geocoding.py  test_golden_report_cases.py  test_patterns.py  test_persistence_api.py  test_relationship_smoke.py  test_report.py  test_theme_index.py  test_ui_content.py  test_validation.py  test_weighting.py  test_zodiac.py
tests/fixtures/: relationship_cases.py
