[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation-astro-core"
version = "0.1.0"
description = "Calculation core for the Constellation relational astrology MVP"
requires-python = ">=3.11"
dependencies = [
  "pyswisseph>=2.10.3.2",
  "pydantic>=2.7",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "timezonefinder>=6.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "packages/astro-core"}

[tool.setuptools.packages.find]
where = ["packages/astro-core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
